--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.36.0",
+    "d3": "^7.9.0",
+    "express-rate-limit": "^8.2.1",
+    "ioredis": "^5.9.2",
     "lucide-react": "^0.562.0",
+    "rate-limit-redis": "^4.3.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "^3.6.0",
-    "d3": "^7.9.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
